# batched_lm_generation

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
batched_lm_generation/: automodel_base.py  automodel_chatcoder.py  base.py  bigcode_format.py  gpt4o_vision.py  hf_format.py  map_generations.py  multiple_format.py  vision2seqmodel.py  vllm_base.py
batched_lm_generation/tests/: test_automodel_base.py
tests/: test_automodel_base.py
