[tool.poetry]
name = "batched_lm_generation"
version = "1.0.0"
description = "Utilities for LLM generation."
authors = ["Arjun Guha <a.guha@northeastern.edu>"]
license = "Other"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.19.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
